Make LOCATION property inheritable for iCalendar export.
Harri Kiiskinen suggested that it might be useful to make the LOCATION
property an inherited property during iCalendar export.  In this way
you can have set the LOCATION for a whole set of items by setting it
only in the parent.

While this will slow down iCalendar export for large files, I think it
can be quite useful.  This patch does implement the basic code needed
for this functionality.  However, you still need to tell Org that
LOCATION should be inherited, by setting org-use-property-inheritance.
If you set it to t, beware that this may trigger a significant
slowdown when creating the match view in the agenda.  So it may be
better to set this variable to

(setq org-use-property-inheritance '("LOCATION"))

instead.

--- a/Changes.org
+++ b/Changes.org
@@ -110,6 +110,16 @@
     | org-export-with-tags          | :tags               | tags:          |
     | org-export-with-priority      | :priority           | pri:           |
 
+*** LOCATION can be inherited for iCalendar export
+
+    The LOCATION property can now be inherited during iCalendar
+    export if you configure =org-use-property-inheritance= like
+    this:
+
+#+begin_src emacs-lisp
+(setq org-use-property-inheritance '("LOCATION"))
+#+end_src
+
 * Version 6.13
 
 ** Overview
