Customizable faces for individual tags.
Samuel Wales writes:

> It would be really nice if you could set tags to different
> faces the way you can with todo keywords.
>
> For example, you could set :urgent: to a bright color.  Or
> set a face for all contexts.

This patch add a new customization variable `org-tag-faces' that can
be used to specify such faces.  The rest of the patch implements these
new faces in Org-mode buffers as well as in the agenda.

--- a/Changes.org
+++ b/Changes.org
@@ -120,6 +120,14 @@
 (setq org-use-property-inheritance '("LOCATION"))
 #+end_src
 
+*** Special faces can be set for individual tags
+
+    You may now use the variable =org-tag-faces= to define the
+    face used for specific tags, much in the same way as you can
+    do for TODO keywords.
+
+    Thanks to Samuel Wales for this proposal.
+
 * Version 6.13
 
 ** Overview
