--- a/Changes.org
+++ b/Changes.org
@@ -11,11 +11,47 @@
 #+LINK_HOME: http://orgmode.org
 
 
-* Version 6.14
+* Version 6.15 (in preparation)
   :PROPERTIES:
   :VISIBILITY: content
   :END:
+** Overview
+** Incompatible changes
+** Details
+*** Captions and attributes for figures and tables.
 
+Tables, and Hyperlinks that represent inlined images, can now be
+equipped with additional information that will be used during
+export.  The information will be taken from the following special
+lines in the buffer and apply to the first following table or
+link.
+
+  - #+CAPTION: :: The caption of the image or table.  This string
+       should be processed according to the export backend, but
+       this is not yet done.
+  - #+LABEL: :: A label to identify the figure/table for cross
+       references.  For HTML export, this string will become the
+       ID for the ~<div class="figure">~ element that encapsulates
+       the image tag and the caption.  For LaTeX export, this
+       string will be used as the argument of a ~\label{...}~
+       macro.  These lables will be available for internal links
+       like ~[[label][Table] ]~.
+  - #+ATTR_HTML: :: Attributes for HTML export of image, to be
+       added as attributes into the ~<img...>~ tag.  This string
+       will not be processed, so it should have immediately the
+       right format.
+  - #+ATTR_LaTeX: :: Attributes for LaTeX export of images, to
+       be inserted into the optional argument of the
+       ~\includegraphics[...]{file}~ command, to specify scaling,
+       clipping and other options.  This string will not be
+       processed, so it should have immediately the right
+       format, like =width=5cm,angle=90=
+
+For LaTeX export, if either a caption or a label is given, the
+element will be exported as a float, i.e. wrapped into a figure
+or table environment.
+
+* Version 6.14
 ** Overview
 
    - New relative timer to support timed notes 
