Webpage: Change section title for Worg section.

--- a/index.org
+++ b/index.org
@@ -142,14 +142,16 @@ Some more information about this can be found in the [[http://orgmode.org/worg/o
 </form>
 #+END_HTML
 
-** Worg - user-driven knowledge-base about org-mode
+** Worg - User-edited content
 
 [[http://orgmode.org/worg/][Worg]], created by [[http://www.cognition.ens.fr/~guerry/][Bastien Guerry]], is a setup to allow users to jointly
 edit a number of Org-mode files containing documentation about
-Org-mode.  This is something like a wiki, but with the advantage that
-you do not have to be online to modify a file.  If you'd like to
-contribute your own setup, screenshots, tutorials etc, please go to
-[[http://orgmode.org/worg/][the Worg page]], and start from there.
+Org-mode, including the [[http://orgmode.org/worg/org-faq.php][Org Mode FAQ]] and [[http://orgmode.org/worg/org-tutorials/index.php][Tutorials]].  Worg is similar
+to a wiki in that allows community to edit the contents.  However,
+since it uses a distributed version control system, you do not have to
+be online while editing it.  If you'd like to contribute to Worg by
+posting your own special setup, screenshots, tutorials etc, please go
+to [[http://orgmode.org/worg/][the Worg page]], and start from there.
 
 ** Tutorials
 
